Сделал маршрутизацию с помощью react-router-dom

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,10 +24,11 @@
     <!-- Для PWA (Progressive Web App) -->
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
 
+    <!-- Шрифты -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Tagesschrift&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Tagesschrift&display=swap"
       rel="stylesheet"
     />
 
