--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,6 +32,12 @@
       rel="stylesheet"
     />
 
+    <!-- Для авторизации -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
